deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx1
  name: nginx1
  namespace: nogada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: nginx1
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /usr/share/nginx/html/
              name: nginx-index-file
      volumes:
        - configMap:
            defaultMode: 420
            name: index-v1
          name: nginx-index-file
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx1
  name: nginx2
  namespace: nogada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: nginx2
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /usr/share/nginx/html/
              name: nginx-index-file
      volumes:
        - configMap:
            defaultMode: 420
            name: index-v2
          name: nginx-index-file
