service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx1
  name: nginx1
  namespace: nogada
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx1
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx2
  name: nginx2
  namespace: nogada
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx2
  type: NodePort
